# bearingsimulator

./: CMakeLists.txt  README.md
assets/: corridoio.txt  landmarks.txt~
include/: simulator.h
src/: simulator.cpp  simulator.cpp~  stuff.cpp  stuff.cpp~
